# Daly-BMS-Rust

./: .env  .env.docker  .gitignore  ARCHITECTURE.md  Analyse_Methode.txt  CLAUDE.md  CLAUSE_MQTT_SECTION.txt  CMakeLists.txt  CODE_REVIEW_IMPROVEMENT_PLAN.md  Cargo.toml  Config.docker.toml  Config.toml  DASHBOARD_EXTENSION_GUIDE.md  DEBUG_ONDULEUR_SMARTSHUNT.md  DEPLOY.sh  DEVELOPMENT.md  Dockerfile  FEATURE_ROADMAP.md  GRAFANA_IMPLEMENTATION_SUMMARY.md  GRAFANA_INDEX.md  GRAFANA_INTEGRATION_COMPLETE.md  GRAFANA_SETUP.md  IMPLEMENTATION_VERIFICATION.md  MODULES.md  MQTT_DEBUGGING_GUIDE.md  MQTT_RESTORE_IMMEDIATE.md  Makefile  Migration-Tsink.md  PATHS_REFERENCE.txt  PI5_ACTION_PLAN.md  PROCEDURES.md  QUICK_MQTT_DIAGNOSIS.sh  README.md  Readme.md  START_HERE.md  debug.sh  docker-compose.infra.yml  docker-compose.yml  idf_component.yml  partitions.csv  (+1 more)
ReactFlow/: Correction.md  DeuxBattery.md  NodeBattery.md  NodeET112.md  NodeShunt.md  Nodes.md  Process.md  README.md  Test-server.md  et112Animations.css  issue.md  shuntAnimations.css  switchAnimations.css  temperatureAnimations.css
archive/: README.md
archive/web server/: CMakeLists.txt  PHASE4_REFACTORING_WEB_SERVER.md  web_server.c  web_server.h  web_server_alerts.c  web_server_api.c  web_server_auth.c  web_server_internal.h  web_server_static.c  web_server_websocket.c
contrib/: daly-bms.service  deploy-nodered-flows.py  energy-manager.service  install-systemd.sh  nginx.conf
crates/daly-bms-probe/: Cargo.toml
crates/daly-bms-probe/src/: main.rs
crates/dbus-mqtt-venus/: Cargo.toml
crates/dbus-mqtt-venus/src/: battery_service.rs  config.rs  heatpump_service.rs  main.rs  meteo_service.rs  mqtt_source.rs  sensor_manager.rs  switch_manager.rs  switch_service.rs  temperature_service.rs  types.rs
crates/energy-manager/: Cargo.toml
crates/energy-manager/src/: bus.rs  config.rs  main.rs  types.rs
crates/energy-manager/src/http_clients/: lg_thinq.rs  mod.rs  open_meteo.rs
crates/energy-manager/src/influx/: client.rs
crates/energy-manager/src/live_ws/: server.rs
crates/energy-manager/src/logic/: charge_current.rs  deye_command.rs  inverter.rs  irradiance.rs  meteo.rs  mod.rs  platform.rs  smartshunt.rs  solar_power.rs  switch_ats.rs  tasmota.rs  victron_keepalive.rs  water_heater.rs
crates/energy-manager/src/mqtt/: client.rs  mod.rs  topics.rs
crates/energy-manager/src/persist/: baseline.rs
docs/: 1-Dashboard-Unifié.txt  ATS.txt  ATS_CHINT_MAINTENANCE.md  Aider.md  CHINT.html  CHINT_ATS_RS485.md  DEPLOY-VENUS-ARMV7.md  Deployment-Pi5.md  GLM5.md  JSONData.json  MANUEL_ATS_RS485.md  Plan.md  Readme-Lynx.md  VENUS-DEVICE-INTEGRATION.md  dalyModbusProtocol.xlsx  energy-manager-guide.md  migration-nodered-rust.md  phase3-venus-dbus-evaluation.md
flux-nodered/: All-nodered-flow.json  Flux-All.json  Platform-Pi5.json  Solar_power.json  Switch-ATS.json  Tasmota.json  fix-pvinv-baseline.json  flows (10).json  flows (8).json  flows 13.json  flows 7.json  inverter.json  meteo.json  power.json  readme-migration.md  setwaterheater.json  smartshunt.json  tasmota.json  testing.json
grafana/: 13295_rev3 (1).json  13295_rev3.json  README.md
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c
nanoPi/: README.md  cleanup-dbus-serialbattery.sh  config-bms1.ini  config-bms2.ini  config-nanopi.toml  install-venus.sh
reactflow-energie/: index.html  package.json  (+2 more)
test/: CMakeLists.txt  README.md  THREAD_SAFETY_TESTS.md  test_can_conversion.c  test_can_publisher_integration.c  test_can_victron_events.c  test_config_manager_json.c  test_end_to_end.c  test_event_bus.c  test_monitoring.c  test_mqtt_client.c  test_system_metrics.c  test_thread_safety.c  test_uart_bms.c  test_uart_modbus.c  test_web_server_config_visibility.c  test_web_server_ota_errors.c  uart_sim.py  uart_test_vectors.c  uart_test_vectors.h
test/mock/: mock_wifi.c
test/mqtt/: test_tiny_mqtt_publisher.c
test/persistence/: test_energy_restart.c
test/reference/: can_expected_snapshot.csv  uart_frames.json
(+253 files in other folders)
