idf_component_register(SRCS "test_event_bus.c" "test_uart_bms.c" "test_end_to_end.c" "test_can_conversion.c" "test_can_victron_events.c" "test_can_publisher_integration.c" "test_mqtt_client.c" "test_monitoring.c" "test_thread_safety.c" "uart_test_vectors.c" "mqtt/test_tiny_mqtt_publisher.c" "persistence/test_energy_restart.c" "test_system_metrics.c" "test_config_manager_json.c" "test_web_server_ota_errors.c" "test_web_server_config_visibility.c" "mock/mock_wifi.c"
                      INCLUDE_DIRS "." "../main/include"
                      REQUIRES unity event_bus uart_bms can_publisher config_manager mqtt_client monitoring system_metrics)
